[gd_scene load_steps=36 format=3 uid="uid://8dxylurtfwp1"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_rf46g"]
[ext_resource type="PackedScene" uid="uid://dco5cmfrb87bx" path="res://Scenes/Guns/burst_gun.tscn" id="2_2p718"]
[ext_resource type="PackedScene" uid="uid://dt8e8r0ew3fjn" path="res://Scenes/Projectiles/missile.tscn" id="3_crlbv"]
[ext_resource type="PackedScene" uid="uid://dfni57jntnnk8" path="res://Scenes/missile_lock_group.tscn" id="4_vmlm7"]
[ext_resource type="PackedScene" uid="uid://dc6ukdkam24n" path="res://Scenes/hit_box_component.tscn" id="6_8otd8"]
[ext_resource type="PackedScene" uid="uid://034dpfhar4p4" path="res://Scenes/health_component.tscn" id="7_vhcpa"]
[ext_resource type="AudioStream" uid="uid://brf6ht6wpkh3a" path="res://Assets/SoundEffects/lowFrequency_explosion_001.ogg" id="8_klb2b"]
[ext_resource type="PackedScene" uid="uid://c5a4dsie0n5u6" path="res://Scenes/weapon_handler.tscn" id="9_1xly7"]
[ext_resource type="AudioStream" uid="uid://cvrvs2a12nuqr" path="res://Assets/SoundEffects/whoosh_medium_001.ogg" id="9_ktweb"]
[ext_resource type="PackedScene" uid="uid://6aihaxnn6c6p" path="res://Scenes/Projectiles/bullet_ray_basic.tscn" id="10_pdsdm"]
[ext_resource type="PackedScene" uid="uid://ch30rmws7v08k" path="res://Scenes/contrail.tscn" id="10_shexg"]
[ext_resource type="PackedScene" uid="uid://djj4vi4d1fq2m" path="res://Scenes/Projectiles/auto_seeking_missile.tscn" id="11_a8ss5"]
[ext_resource type="AudioStream" uid="uid://ci04qcsgn8w7q" path="res://Assets/SoundEffects/clean-machine-gun-burst-98224.ogg" id="11_itcpr"]
[ext_resource type="PackedScene" uid="uid://drm4t5i6exnhc" path="res://Assets/Guns/gatling_gun.tscn" id="11_kbwk7"]
[ext_resource type="PackedScene" uid="uid://b8ln3rpl1ayn6" path="res://Assets/Ships/fighter_chassis_diamond.tscn" id="12_a77x5"]
[ext_resource type="PackedScene" uid="uid://cnelcvgwycqmo" path="res://Assets/Ships/engine_mesh_component.tscn" id="12_e20ac"]
[ext_resource type="AudioStream" uid="uid://bjvh6ui8ln1fd" path="res://Assets/SoundEffects/industrial-mechanic-using-rattle-gun-compressed-air-socket-wrench-9944.ogg" id="12_ig3m3"]
[ext_resource type="PackedScene" uid="uid://ddoyejlbh51s5" path="res://Scenes/Guns/hit_scan_gun.tscn" id="13_428na"]
[ext_resource type="PackedScene" uid="uid://58nrpfbay3lf" path="res://Assets/Particles/muzzle_flash.tscn" id="14_4ajg4"]
[ext_resource type="PackedScene" uid="uid://dup57p4ygajr1" path="res://Scenes/Guns/laser_shotgun.tscn" id="15_ufo67"]
[ext_resource type="PackedScene" uid="uid://bp0suqn2071pk" path="res://Assets/Guns/laser_beam.tscn" id="16_y2utm"]
[ext_resource type="PackedScene" uid="uid://b5exo1u3hem8p" path="res://Scenes/Guns/gun.tscn" id="19_yfprc"]
[ext_resource type="PackedScene" uid="uid://cbyb5ysj3umaf" path="res://Scenes/Projectiles/shotgun_pellet.tscn" id="20_de7w0"]
[ext_resource type="PackedScene" uid="uid://cruqo01kbn3ab" path="res://Scenes/shield.tscn" id="21_5ow11"]
[ext_resource type="PackedScene" uid="uid://bxdfmqb6p8cw6" path="res://Scenes/Projectiles/laser_guided_missile.tscn" id="21_uelja"]
[ext_resource type="PackedScene" uid="uid://cungbhnq1r7av" path="res://Scenes/camera_group.tscn" id="31_sqqoi"]
[ext_resource type="Shader" uid="uid://bm3gcg5xbsv0" path="res://Assets/Shaders/FresnelAura.tres" id="34_80okc"]
[ext_resource type="PackedScene" uid="uid://d16idtxuqv0yq" path="res://Scenes/MovementControllers/player_move_schemes/ballistic_movement_v_3.tscn" id="35_gd40f"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7tg00"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vnt6v"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jyjhj"]
albedo_color = Color(0.282353, 0.282353, 0.282353, 1)
metallic = 0.51
roughness = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_tbbj7"]
material = SubResource("StandardMaterial3D_jyjhj")
top_radius = 0.01
bottom_radius = 0.01
height = 0.7
radial_segments = 16

[sub_resource type="CylinderMesh" id="CylinderMesh_s2gsa"]
material = SubResource("StandardMaterial3D_jyjhj")
top_radius = 0.01
bottom_radius = 0.01
height = 0.35
radial_segments = 16

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4o42"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("34_80okc")
shader_parameter/FresnelPower = 2.0
shader_parameter/EmissionStrength = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_2lbpm"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_j4o42")

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("controller") groups=["team property"]]
motion_mode = 1
script = ExtResource("1_rf46g")
controller = NodePath("BallisticMovementV3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_7tg00")

[node name="MissileLauncher" parent="." node_paths=PackedStringArray("collision_exception1", "collision_exception2") instance=ExtResource("2_2p718")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -5.5)
bullet = ExtResource("3_crlbv")
damage = 50.0
bullet_speed = 200.0
fire_rate = 0.3
collision_exception1 = NodePath("../HitBoxComponent")
collision_exception2 = NodePath("../Shield/HitBoxComponent")

[node name="MissileLockGroup" parent="." node_paths=PackedStringArray("missile_launcher") instance=ExtResource("4_vmlm7")]
missile_launcher = NodePath("../MissileLauncher")

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_8otd8")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent"]
shape = SubResource("SphereShape3D_vnt6v")

[node name="HealthComponent" parent="." instance=ExtResource("7_vhcpa")]
max_health = 1000

[node name="Sounds" type="Node3D" parent="."]

[node name="GotHitAudio" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("8_klb2b")

[node name="NearMissAudio" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("9_ktweb")

[node name="Contrail" parent="." instance=ExtResource("10_shexg")]
transform = Transform3D(1, 8.35188e-23, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)
_startColor = Color(0.537255, 0.152941, 1, 1)
_endColor = Color(9.62615e-07, 0.813047, 0.817459, 1)

[node name="WeaponHandler" parent="." instance=ExtResource("9_1xly7")]

[node name="GatlingGun" parent="WeaponHandler" node_paths=PackedStringArray("gun_animation", "muzzle_flash", "collision_exception1", "collision_exception2") instance=ExtResource("2_2p718")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.63, 0.14, -5)
burst_total = 6
burst_rate = 12.0
bullet = ExtResource("10_pdsdm")
bullet_speed = 600.0
fire_rate = 1.2
use_near_miss = false
spread_deg = 3.0
fire_sound = ExtResource("11_itcpr")
reload_sound = ExtResource("12_ig3m3")
gun_animation = NodePath("GunModel/AnimationPlayer")
muzzle_flash = NodePath("MuzzleFlash")
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="GunModel" parent="WeaponHandler/GatlingGun" instance=ExtResource("11_kbwk7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.132, 1.3)

[node name="MuzzleFlash" parent="WeaponHandler/GatlingGun" instance=ExtResource("14_4ajg4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.185093)

[node name="AutoSeekingMissileLauncher" parent="WeaponHandler" node_paths=PackedStringArray("collision_exception1", "collision_exception2") instance=ExtResource("19_yfprc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.33626)
bullet = ExtResource("11_a8ss5")
bullet_speed = 150.0
bullet_timeout = 3.0
fire_rate = 3.0
use_near_miss = false
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="HitScanGun" parent="WeaponHandler" node_paths=PackedStringArray("laser_mesh", "laser_mesh_pivot", "gun_animation", "ray", "collision_exception1", "collision_exception2") instance=ExtResource("13_428na")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.14718, 0, -2.39168)
laser_mesh = NodePath("Node/Head/LaserMesh")
laser_mesh_pivot = NodePath("Node/Head")
fire_rate = 5.0
use_near_miss = false
gun_animation = NodePath("Node/Head/LaserMesh/AnimationPlayer")
ray = NodePath("RayCast3D")
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="RayCast3D" type="RayCast3D" parent="WeaponHandler/HitScanGun"]
target_position = Vector3(0, 0, -1000)
collision_mask = 10
collide_with_areas = true

[node name="Node" parent="WeaponHandler/HitScanGun" instance=ExtResource("16_y2utm")]

[node name="LaserMesh" parent="WeaponHandler/HitScanGun/Node/Head" index="0"]
visible = false

[node name="LaserShotgun" parent="WeaponHandler" node_paths=PackedStringArray("collision_exception1", "collision_exception2") instance=ExtResource("15_ufo67")]
bullet = ExtResource("20_de7w0")
bullet_speed = 500.0
fire_rate = 3.0
use_near_miss = false
spread_deg = 5.0
simultaneous_shots = 8
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="LaserGuidedLauncher" parent="WeaponHandler" node_paths=PackedStringArray("ray", "collision_exception1", "collision_exception2") instance=ExtResource("19_yfprc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.40851)
bullet = ExtResource("21_uelja")
bullet_speed = 200.0
bullet_timeout = 5.0
fire_rate = 2.0
use_near_miss = false
spread_deg = 90.0
simultaneous_shots = 8
ray = NodePath("RayCast3D")
collision_exception1 = NodePath("../../HitBoxComponent")
collision_exception2 = NodePath("../../Shield/HitBoxComponent")

[node name="RayCast3D" type="RayCast3D" parent="WeaponHandler/LaserGuidedLauncher"]
enabled = false
target_position = Vector3(0, 0, -1000)
collision_mask = 10
collide_with_areas = true

[node name="FighterChassisDiamond" parent="." instance=ExtResource("12_a77x5")]

[node name="EngineMeshComponent" parent="FighterChassisDiamond" instance=ExtResource("12_e20ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.7, -8)

[node name="EngineMeshComponent2" parent="FighterChassisDiamond" instance=ExtResource("12_e20ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0.7, -8)

[node name="EngineMeshComponent3" parent="FighterChassisDiamond" instance=ExtResource("12_e20ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, -0.7, -8)

[node name="EngineMeshComponent4" parent="FighterChassisDiamond" instance=ExtResource("12_e20ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, -0.7, -8)

[node name="Cockpit3" type="Node3D" parent="FighterChassisDiamond"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2.72759e-07, 0.6, 3.12)

[node name="LeftStrut" type="MeshInstance3D" parent="FighterChassisDiamond/Cockpit3"]
transform = Transform3D(1, 0, 0, 0, 0.867297, -0.497792, 0, 0.497792, 0.867297, -0.17, -0.0907253, -0.0148683)
mesh = SubResource("CylinderMesh_tbbj7")

[node name="RightStrut" type="MeshInstance3D" parent="FighterChassisDiamond/Cockpit3"]
transform = Transform3D(1, 0, 0, 0, 0.867297, -0.497792, 0, 0.497792, 0.867297, 0.17, -0.0907253, -0.0148683)
mesh = SubResource("CylinderMesh_tbbj7")

[node name="CrossBar" type="MeshInstance3D" parent="FighterChassisDiamond/Cockpit3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.207488, 0.157279)
mesh = SubResource("CylinderMesh_s2gsa")

[node name="LeftStrutBack" type="MeshInstance3D" parent="FighterChassisDiamond/Cockpit3"]
transform = Transform3D(1, 0, 0, 0, -0.125299, -0.992119, 0, 0.992119, -0.125299, -0.17, 0.160132, 0.513052)
mesh = SubResource("CylinderMesh_tbbj7")

[node name="RightStrutBack" type="MeshInstance3D" parent="FighterChassisDiamond/Cockpit3"]
transform = Transform3D(1, 0, 0, 0, -0.125299, -0.992119, 0, 0.992119, -0.125299, 0.17, 0.16, 0.513)
mesh = SubResource("CylinderMesh_tbbj7")

[node name="CameraGroup" parent="." instance=ExtResource("31_sqqoi")]

[node name="Shield" parent="." instance=ExtResource("21_5ow11")]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, 0)

[node name="FresnelAura" parent="Shield" index="0"]
mesh = SubResource("SphereMesh_2lbpm")

[node name="BallisticMovementV3" parent="." instance=ExtResource("35_gd40f")]

[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
[connection signal="body_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_body_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_lost" from="HealthComponent" to="." method="_on_health_component_health_lost"]

[editable path="WeaponHandler/GatlingGun/GunModel"]
[editable path="WeaponHandler/HitScanGun/Node"]
[editable path="Shield"]
